@@ -92,7 +92,8 @@
         Waluyo Adi Siswanto,
 		Eduardo Roberto Greco,
 		Thiago Gomes Toledo,
-		Renato Massao Maeda da Silva</p>
+		Renato Massao Maeda da Silva,
+		Yara Grassi Gouffon</p>
 
         <h2>Thanks to:</h2>
 
